--- a/index.html
+++ b/index.html
@@ -15,21 +15,18 @@
 
         <nav style="color: maroon;">
             <br>
-            <br>
-            <br>
-            <br>
             <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;Ogm</a>
             <a href="https://odsgm.meb.gov.tr/www/11-sinif-tekrar-testleri/icerik/537" target="_blank" style="color: red">&nbsp;Test</a>
             <a href="https://odsgm.meb.gov.tr/www/ortaogretim-kazanim-testleri-2022-2023/icerik/902" target="_blank" style="color: red">&nbsp;Kazanım</a>
             <br>
             <br>
-            <a href="https://www.zaferhoca.com.tr/img/indir/kelimeliste/dosya/encokkullanilan1500.pdf" target="_blank" class="english" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;English</a>
+            <a href="https://www.zaferhoca.com.tr/img/indir/kelimeliste/dosya/encokkullanilan1500.pdf" target="_blank" class="english" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp;English</a>
             <br>
             <br>
-            <a href="https://lichess.org/" target="_blank" class="chess" style="color: red" > &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Chess</a>
+            <a href="https://lichess.org/" target="_blank" class="chess" style="color: red" > &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Chess</a>
             <br>
             <br>
-            <a href="https://sweapfelix.github.io/solarflared/" target="_blank" class="mola" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Mola</a>
+            <a href="https://sweapfelix.github.io/solarflared/" target="_blank" class="mola" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Mola</a>
         </nav>
     </header>
     
