--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://odsgm.meb.gov.tr/www/ortaogretim-kazanim-testleri-2022-2023/icerik/902" target="_blank" style="color: red">&nbsp;Kazanım</a>
             <br>
             <br>
-            <a href="https://www.zaferhoca.com.tr/img/indir/kelimeliste/dosya/encokkullanilan1500.pdf" target="_blank" class="english" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp;English</a>
+            <a href="https://acrobat.adobe.com/link/track?uri=urn:aaid:scds:US:4c692277-970b-491f-b7f3-1154ffd70c71" target="_blank" class="english" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp;English</a>
             <br>
             <br>
             <a href="https://lichess.org/" target="_blank" class="chess" style="color: red" > &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Chess</a>
