--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
 
         <nav style="color: maroon;">
             <br>
+            <br>
             <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;Ogm</a>
             <a href="https://odsgm.meb.gov.tr/www/11-sinif-tekrar-testleri/icerik/537" target="_blank" style="color: red">&nbsp;Test</a>
             <a href="https://odsgm.meb.gov.tr/www/ortaogretim-kazanim-testleri-2022-2023/icerik/902" target="_blank" style="color: red">&nbsp;Kazanım</a>
+            <br>
+            <br>
+            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;Yks Kampı</a>
+            <br>
+            <br>
+            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;Yks Hazırlık</a>
             <br>
             <br>
             <a href="https://acrobat.adobe.com/link/track?uri=urn:aaid:scds:US:4c692277-970b-491f-b7f3-1154ffd70c71" target="_blank" class="english" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp;English</a>
