--- a/index.html
+++ b/index.html
@@ -16,38 +16,38 @@
         <nav style="color: maroon;">
             <br>
             <br>
-            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;Ogm</a>
+            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;&nbsp;&nbsp;&nbsp;Ogm</a>
             <a href="https://odsgm.meb.gov.tr/www/11-sinif-tekrar-testleri/icerik/537" target="_blank" style="color: red">&nbsp;Test</a>
             <a href="https://odsgm.meb.gov.tr/www/ortaogretim-kazanim-testleri-2022-2023/icerik/902" target="_blank" style="color: red">&nbsp;Kazanım</a>
             <br>
             <br>
-            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;Yks Kampı</a>
+            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yks Kampı</a>
             <br>
             <br>
-            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;Yks Hazırlık</a>
+            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank" style="color: red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yks Hazırlık</a>
             <br>
             <br>
-            <a href="https://acrobat.adobe.com/link/track?uri=urn:aaid:scds:US:4c692277-970b-491f-b7f3-1154ffd70c71" target="_blank" class="english" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp;English</a>
+            <a href="https://acrobat.adobe.com/link/track?uri=urn:aaid:scds:US:4c692277-970b-491f-b7f3-1154ffd70c71" target="_blank" class="english" style="color: red"> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;English</a>
             <br>
             <br>
-            <a href="https://lichess.org/" target="_blank" class="chess" style="color: red" > &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Chess</a>
+            <a href="https://lichess.org/" target="_blank" class="chess" style="color: red" > &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chess</a>
             <br>
             <br>
-            <a href="https://sweapfelix.github.io/solarflared/" target="_blank" class="mola" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Mola</a>
+            <a href="https://sweapfelix.github.io/solarflared/" target="_blank" class="mola" style="color: red"> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mola</a>
         </nav>
     </header>
     
     <div class="buttons">
-        <button style="background-color: black;">
+        <button class="button1" style="background-color: black;">
             <a class="fa-solid fa-dragon fa-fade fa-2xl" style="color: #d00b0b;"
                 href="https://lichess.org/" class="dragon"> </a>
         </button>
-        <button style="background-color: black;">
-            <a &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; class="fa-solid fa-dragon fa-fade fa-2xl" style="color: #d00b0b;"
+        <button class="button2" style="background-color: black;">
+            <a class="fa-solid fa-dragon fa-fade fa-2xl" style="color: #d00b0b;"
                 href="https://lichess.org/" class="dragon"> </a>
         </button>
-        <button style="background-color: black;">
-            <a &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; class="fa-solid fa-dragon fa-fade fa-2xl" style="color: #d00b0b;"
+        <button class="button3" style="background-color: black;">
+            <a class="fa-solid fa-dragon fa-fade fa-2xl" style="color: #d00b0b;"
                 href="https://lichess.org/" class="dragon"> </a>
         </button>
     </div>
