--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 style="color: red">&nbsp;Kazanım</a>
             <br>
             <br>
-            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank"
+            <a href="https://ogmmateryal.eba.gov.tr/yks-kampi" target="_blank"
                 style="color: red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yks
                 Kampı</a>
             <br>
             <br>
-            <a href="https://ogmmateryal.eba.gov.tr/" target="_blank"
+            <a href="https://ogmmateryal.eba.gov.tr/YKSHazirlik" target="_blank"
                 style="color: red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yks Hazırlık</a>
             <br>
             <br>
